--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": "5.6.0",
     "path": "0.12.7",
     "require": "2.4.20",
-    "save": "2.3.2"
+    "save": "2.3.2",
+    "serve-static": "1.13.1"
   }
 }
